add withdraw layout

--- a/app/assets/styles/_spacing.scss
+++ b/app/assets/styles/_spacing.scss
@@ -40,10 +40,18 @@
     width: 100%;
 }
 
-.pl-4{
+.pt-4 {
+    padding-top: 24;
+}
+
+.pb-4 {
+    padding-bottom: 24;
+}
+
+.pl-4 {
     padding-left: 24;
 }
 
-.pr-4{
+.pr-4 {
     padding-right: 24;
 }
