--- a/app/create-account/create-account.component.html
+++ b/app/create-account/create-account.component.html
@@ -89,6 +89,7 @@
                             <Label
                                 class="fa"
                                 text="&#xf029;"
+                                flexShrink="0"
                             ></Label>
                         </FlexboxLayout>
                     </StackLayout>
