--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -15,4 +15,5 @@
     <Button [nsRouterLink]="['/create-account']" text="create-account"></Button>
     <Button [nsRouterLink]="['/home-page']" text="home-page"></Button>
     <Button [nsRouterLink]="['/swap']" text="swap"></Button>
+    <Button [nsRouterLink]="['/withdraw']" text="withdraw"></Button>
 </StackLayout>
