--- a/app/assets/styles/_form.scss
+++ b/app/assets/styles/_form.scss
@@ -20,7 +20,7 @@
     background: #393939;
     placeholder-color: rgba(255, 255, 255, 0.2);
     &.form-control-sm {
-        padding: 10 25;
+        padding: 10 20;
     }
 }
 
@@ -88,6 +88,8 @@
 
 .form-control-qr {
     padding: 15 25;
+    align-items: center;
+    justify-content: space-between;
     TextField {
         background: none;
         border-width: 0;
@@ -99,10 +101,22 @@
         line-height: 16;
         margin-left: 10;
         placeholder-color: rgba(255, 255, 255, 0.2);
+        overflow: hidden;
     }
     Label {
-        color: #cdcdcd;
+        color: #eee;
         font-size: 18;
         font-weight: 500;
+        opacity: 1;
+        width: auto;
+        padding: 0 0 0 10;
+        text-align: center;
+    }
+    &.form-control-sm {
+        padding: 10 15;
+        TextField {
+            padding: 0;
+            margin: 0;
+        }
     }
 }
