--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -16,4 +16,5 @@
     <Button [nsRouterLink]="['/home-page']" text="home-page"></Button>
     <Button [nsRouterLink]="['/swap']" text="swap"></Button>
     <Button [nsRouterLink]="['/withdraw']" text="withdraw"></Button>
+    <Button [nsRouterLink]="['/rewards']" text="rewards"></Button>
 </StackLayout>
