--- a/app/withdraw/withdraw.component.html
+++ b/app/withdraw/withdraw.component.html
@@ -1,4 +1,4 @@
-<ActionBar title="SWAP" color="#fff">
+<ActionBar title="WITHDRAW" color="#fff">
     <NavigationButton class="fa" icon="font://&#xf104;"></NavigationButton>
     <!-- <ActionItem
         class="fa"
