--- a/app/swap/swap.component.scss
+++ b/app/swap/swap.component.scss
@@ -61,6 +61,7 @@
 
 .exchange-box {
     flex-direction: column;
+    justify-content: center;
     background-color: #3a3a3a;
     border-radius: 15;
     padding: 0 10;
@@ -86,4 +87,17 @@
             text-align: center;
         }
     }
+}
+.swap-wrap {
+    top: 50;
+    left: 0;
+    width: 100%;
+    justify-content: flex-end;
+}
+.btn-swap {
+    transform: rotate(90deg);
+    text-align: center;
+    width: 50;
+    margin: 0 25;
+    color: #9c9c9c;
 }
