add daily report

--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -17,4 +17,5 @@
     <Button [nsRouterLink]="['/swap']" text="swap"></Button>
     <Button [nsRouterLink]="['/withdraw']" text="withdraw"></Button>
     <Button [nsRouterLink]="['/rewards']" text="rewards"></Button>
+    <Button [nsRouterLink]="['/rewards-report']" text="rewards report"></Button>
 </StackLayout>
