--- a/app/rewards-report/rewards-report.component.html
+++ b/app/rewards-report/rewards-report.component.html
@@ -15,7 +15,7 @@
     >
         <StackLayout class="no-data">
             <Label class="fa" text="&#xf01c;"></Label>
-            <Label class="text-uppercase" text="No transaction"></Label>
+            <Label class="text-sm text-uppercase" text="No transaction"></Label>
         </StackLayout>
     </FlexboxLayout>
     <StackLayout flexShrink="0">
