--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -18,4 +18,5 @@
     <Button [nsRouterLink]="['/withdraw']" text="withdraw"></Button>
     <Button [nsRouterLink]="['/rewards']" text="rewards"></Button>
     <Button [nsRouterLink]="['/rewards-report']" text="rewards report"></Button>
+    <Button [nsRouterLink]="['/performance']" text="performance"></Button>
 </StackLayout>
