add performance-weekly layout

--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -52,6 +52,10 @@
                 [nsRouterLink]="['/performance-chart']"
                 text="performance chart"
             ></Button>
+            <Button
+                [nsRouterLink]="['/performance-weekly']"
+                text="performance weekly"
+            ></Button>
         </StackLayout>
     </ScrollView>
 </StackLayout>
