--- a/app/assets/styles/_typography.scss
+++ b/app/assets/styles/_typography.scss
@@ -46,3 +46,13 @@ Label {
 .text-uppercase {
     text-transform: uppercase;
 }
+
+.text-center {
+    text-align: center;
+}
+.text-left {
+    text-align: left;
+}
+.text-right {
+    text-align: right;
+}
