update chart title

--- a/app/performance/performance.component.html
+++ b/app/performance/performance.component.html
@@ -15,6 +15,7 @@
         <StackLayout flexGrow="1">
             <ScrollView>
                 <StackLayout class="container">
+                    <Label class="title mb-2" text="SNAP/wk 1.00%"></Label>
                     <RadCartesianChart
                         tkExampleTitle
                         tkToggleNavButton
@@ -32,6 +33,7 @@
                             valueProperty="Amount"
                         ></LineSeries>
                     </RadCartesianChart>
+                    <Label class="title mb-2" text="SNAP/wk 1.00%"></Label>
                     <RadCartesianChart
                         tkExampleTitle
                         tkToggleNavButton
@@ -49,6 +51,7 @@
                             valueProperty="Amount"
                         ></LineSeries>
                     </RadCartesianChart>
+                    <Label class="title mb-2" text="SNAP/wk 1.00%"></Label>
                     <RadCartesianChart
                         tkExampleTitle
                         tkToggleNavButton
